--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
                         http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.guacamole</groupId>
+    <groupId>jp.neuroinf.sim</groupId>
     <artifactId>guacamole-auth-simpf</artifactId>
     <packaging>jar</packaging>
     <version>1.1.0</version>
     <name>guacamole-auth-simpf</name>
-    <url>http://guacamole.apache.org/</url>
+    <url>https://sim.neuroinf.jp/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -80,14 +80,6 @@
     </build>
 
     <dependencies>
-
-        <!-- Java servlet API -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
 
         <!-- Guacamole common API -->
         <dependency>
